# ik-etl-agent-generator

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  USAGE.md  example_usage.py  pyproject.toml  requirements.txt  setup.py  streamlit_app.py  validate_setup.py
data/: README.md
data/healthcare/: patient_records.csv  schema.json
data/telecom/: customer_data.csv  schema.json
etl_agent/: __init__.py  config.py  main.py
etl_agent/agent/: __init__.py  state.py  workflow.py
etl_agent/generators/: __init__.py  doc_generator.py  pipeline_generator.py  review_generator.py  test_generator.py
etl_agent/github/: __init__.py  client.py
etl_agent/utils/: __init__.py  code_formatter.py  dataset_loader.py  notebook_builder.py  streamlit_logger.py  validator.py
examples/: example_user_stories.md
